# lab2

./: CMakeLists.txt
FinalPro/: main.cpp  model.cpp  skybox.cpp  terrain.cpp
FinalPro/render/: headers.h  shader.h  texture.cpp
FinalPro/shaders/: model.frag  skybox.frag  skybox.vert  terrain.frag
lab2/: lab2_building.cpp  mesh.cpp  mesh.h  model.cpp  model.frag  model.h  model.vert  terrain.frag  terrain.vert
lab2/render/: shader.h
